<?xml version="1.0" encoding="utf-8"?>
<!--
Abstract :

Preferences for Stephe's Music Player.
Copyright (C) 2011 Stephen Leake.  All Rights Reserved.

This program is free software; you can redistribute it and/or
modify it under terms of the GNU General Public License as
published by the Free Software Foundation; either version 3, or
(at your option) any later version. This program is distributed in
the hope that it will be useful, but WITHOUT ANY WARRANTY; without
even the implied warranty of MERCHANTABILITY or FITNESS FOR A
PARTICULAR PURPOSE. See the GNU General Public License for more
details. You should have received a copy of the GNU General Public
License distributed with this program; see file COPYING. If not,
write to the Free Software Foundation, 51 Franklin Street, Suite
500, Boston, MA 02110-1335, USA.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
      android:title="all">

    <ListPreference
        android:key="@string/smm_directory_key"
        android:defaultValue="@string/smm_directory_default"
        android:title="@string/smm_directory_title"
        android:summary="@string/smm_directory_summary"
        android:dialogTitle="@string/smm_directory_dialog_title" />
    <!-- list entries filled at runtime -->

    <MultiSelectListPreference
        android:key="@string/auto_download_playlists_key"
        android:defaultValue="@string/auto_download_playlists_default"
        android:title="@string/auto_download_playlists_title"
        android:summary="@string/auto_download_playlists_summary"
        android:dialogTitle="@string/auto_download_playlists_dialog_title" />
    <!-- list entries filled at runtime -->

    <EditTextPreference
        android:key="@string/song_count_max_key"
        android:defaultValue="@string/song_count_max_default"
        android:numeric="integer"
        android:title="@string/song_count_max_title"
        android:summary="@string/song_count_max_summary"
        android:dialogTitle="@string/song_count_max_dialog_title" />

    <EditTextPreference
        android:key="@string/new_song_fraction_key"
        android:defaultValue="@string/new_song_fraction_default"
        android:numeric="decimal"
        android:title="@string/new_song_fraction_title"
        android:summary="@string/new_song_fraction_summary"
        android:dialogTitle="@string/new_song_fraction_dialog_title" />

    <EditTextPreference
        android:key="@string/over_select_ratio_key"
        android:defaultValue="@string/over_select_ratio_default"
        android:numeric="decimal"
        android:title="@string/over_select_ratio_title"
        android:summary="@string/over_select_ratio_summary"
        android:dialogTitle="@string/over_select_ratio_dialog_title" />

    <EditTextPreference
        android:key="@string/song_count_threshold_key"
        android:defaultValue="@string/song_count_threshold_default"
        android:numeric="integer"
        android:title="@string/song_count_threshold_title"
        android:summary="@string/song_count_threshold_summary"
        android:dialogTitle="@string/song_count_threshold_dialog_title" />

    <ListPreference
        android:key="@string/log_level_key"
        android:defaultValue="Info"
        android:title="@string/log_level_title"
        android:summary="@string/log_level_summary"
        android:dialogTitle="@string/log_level_dialog_title" />
    <!-- list entries filled at runtime -->

    <EditTextPreference
        android:key="@string/server_IP_key"
        android:defaultValue="@string/server_IP_default"
        android:title="@string/server_IP_title"
        android:summary="@string/server_IP_summary"
        android:dialogTitle="@string/server_IP_dialog_title" />

    <EditTextPreference
        android:key="@string/prev_threshold_key"
        android:defaultValue="@string/prev_threshold_default"
        android:numeric="integer"
        android:title="@string/prev_threshold_title"
        android:summary="@string/prev_threshold_summary"
        android:dialogTitle="@string/prev_threshold_dialog_title" />

    <EditTextPreference
        android:key="@string/text_scale_key"
        android:defaultValue="@string/text_scale_default"
        android:numeric="decimal"
        android:title="@string/text_scale_title"
        android:summary="@string/text_scale_summary"
        android:dialogTitle="@string/text_scale_dialog_title" />

  </PreferenceCategory>

</PreferenceScreen>
