<?xml version="1.0" encoding="utf-8"?>
<!--
  Abstract :

  Main menu for Stephe's Music Player

  Copyright (C) 2024 Stephen Leake.  All Rights Reserved.

  This program is free software; you can redistribute it and/or
  modify it under terms of the GNU General Public License as
  published by the Free Software Foundation; either version 3, or
  (at your option) any later version. This program is distributed in
  the hope that it will be useful, but WITHOUT ANY WARRANTY; without
  even the implied warranty of MERCHANTABILITY or FITNESS FOR A
  PARTICULAR PURPOSE. See the GNU General Public License for more
  details. You should have received a copy of the GNU General Public
  License distributed with this program; see file COPYING. If not,
  write to the Free Software Foundation, 51 Franklin Street, Suite
  500, Boston, MA 02110-1335, USA.
-->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
  <item
      android:id="@id/menu_quit"
      android:title="@string/menu_quit"/>
  <item
      android:id="@id/menu_search"
      android:title="@string/menu_search"/>
  <item
      android:id="@id/menu_share"
      android:title="@string/menu_share"/>
  <item
      android:id="@id/menu_liner_notes"
      android:title="@string/menu_liner_notes"/>
  <item
      android:id="@id/menu_copy"
      android:title="@string/menu_copy"/>
  <item
      android:id="@id/menu_update_playlist"
      android:title="@string/menu_update_playlist"/>
  <item
      android:id="@id/menu_reset_playlist"
      android:title="@string/menu_reset_playlist"/>
  <item
      android:id="@id/menu_show_download_log"
      android:title="@string/menu_show_download_log"/>
  <item
      android:id="@id/menu_show_error_log"
      android:title="@string/menu_show_error_log"/>
  <item
      android:id="@id/menu_preferences"
      android:title="@string/menu_preferences"/>
  <item
      android:id="@id/menu_new_playlist"
      android:title="@string/menu_new_playlist"/>
</menu>
