<?xml version="1.0" encoding="utf-8"?>
<!--
  Abstract :

  UI layout for Stephe's Music Player, one size fits all

  Copyright (C) 2011, 2015 Stephen Leake.  All Rights Reserved.

  This program is free software; you can redistribute it and/or
  modify it under terms of the GNU General Public License as
  published by the Free Software Foundation; either version 3, or
  (at your option) any later version. This program is distributed in
  the hope that it will be useful, but WITHOUT ANY WARRANTY; without
  even the implied warranty of MERCHANTABILITY or FITNESS FOR A
  PARTICULAR PURPOSE. See the GNU General Public License for more
  details. You should have received a copy of the GNU General Public
  License distributed with this program; see file COPYING. If not,
  write to the Free Software Foundation, 51 Franklin Street, Suite
  500, Boston, MA 02110-1335, USA.
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/topScroll" >
  <LinearLayout
      android:orientation="vertical"
      android:gravity="top"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:weightSum="1">
    <!-- artist
         album
         song titles
         prev/play/next buttons | time
         seekbar
         notes buttons
         playlist
    -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ff7f7f7f" />  <!-- separator -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/artistTitle"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ff7f7f7f" /> <!-- separator -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/albumTitle"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ff7f7f7f" /> <!-- separator -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/songTitle"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffffff"/> <!-- separator -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="1dip"
        android:paddingBottom="4dip"
        android:orientation="horizontal">
      <!-- prev/play/next buttons | time -->
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:orientation="horizontal"
          android:layout_gravity="bottom"
          android:background="#ff5a5a5a"
          android:layout_marginTop="1dip"
          android:layout_marginBottom="2dip"
          android:gravity="center"> <!-- background for transparent part of buttons -->
        <!-- prev/play/next buttons -->
        <ImageButton
            android:id="@+id/prev"
            android:src="@drawable/previous"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="#00000000"/> <!-- transparent -->
        <ImageButton
            android:id="@+id/play_pause"
            android:src="@drawable/play"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="#00000000"/> <!-- transparent -->
        <ImageButton
            android:id="@+id/next"
            android:src="@drawable/next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:background="#00000000"/> <!-- transparent -->
      </LinearLayout>
      <LinearLayout
          android:orientation="vertical"
          android:gravity="top"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:weightSum="1">
        <!-- times -->
        <TextView
            android:id="@+id/currenttime"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/totaltime"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="12sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
      </LinearLayout>
    </LinearLayout>
    <SeekBar
        android:id="@android:id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="36dip"
        android:paddingLeft="8dip"
        android:paddingRight="8dip"
        android:paddingBottom="4dip" />
    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/notes_buttons_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_marginTop="1dip"
        android:layout_marginBottom="2dip"
        android:gravity="center">
      <!-- SDK 20: can't use @string in textSize attribute, despite the documentation
           API 10: layout_height of wrap_content on buttons screws up; only last button will wrap text
      -->
      <!-- notes buttons, row 1
      -->
      <Button
          style="?android:attr/buttonBarButtonStyle"
          android:id="@+id/note_category"
          android:layout_height="match_parent"
          android:layout_width="wrap_content"
          android:text="@string/note_category"
          android:textSize="20sp"
          android:textStyle="bold"
          android:onClick="onClickNote"/>
      <Button
          style="?android:attr/buttonBarButtonStyle"
          android:id="@+id/note_dont_play"
          android:layout_height="match_parent"
          android:layout_width="wrap_content"
          android:text="@string/note_dont_play"
          android:textSize="20sp"
          android:textStyle="bold"
          android:onClick="onClickNote"/>
      <Button
          style="?android:attr/buttonBarButtonStyle"
          android:id="@+id/note_keep_before"
          android:layout_height="match_parent"
          android:layout_width="wrap_content"
          android:text="@string/note_keep_before"
          android:textSize="20sp"
          android:textStyle="bold"
          android:onClick="onClickNote"/>
    </LinearLayout>
    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:id="@+id/notes_buttons_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="1dip"
        android:layout_marginBottom="2dip"
        android:gravity="center">

      <!-- notes buttons, row 2
      -->
      <Button
          style="?android:attr/buttonBarButtonStyle"
          android:id="@+id/note_want_more"
          android:layout_height="match_parent"
          android:layout_width="wrap_content"
          android:text="@string/note_want_more"
          android:textSize="20sp"
          android:textStyle="bold"
          android:onClick="onClickNote"/>
      <Button
          style="?android:attr/buttonBarButtonStyle"
          android:id="@+id/note_best_list"
          android:layout_height="match_parent"
          android:layout_width="wrap_content"
          android:text="@string/note_best_list"
          android:textSize="20sp"
          android:textStyle="bold"
          android:onClick="onClickNote"/>
      <Button
          style="?android:attr/buttonBarButtonStyle"
          android:id="@+id/note_other"
          android:layout_height="match_parent"
          android:layout_width="wrap_content"
          android:text="@string/note_other"
          android:textSize="20sp"
          android:textStyle="bold"
          android:onClick="onClickNote"/>
    </LinearLayout>
    <TextView
        android:id="@+id/playlistTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:focusable="true"
        android:text="@string/null_playlist"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
  </LinearLayout>
</ScrollView>
